install_headers(
    'action.hpp'
  , 'afc.hpp'
  , 'chb.hpp'
  , 'filter.hpp'
  , 'merit.hpp'
  , 'print.hpp'
  , 'tiebreak.hpp'
  , 'traits.hpp'
  , 'val.hpp'
  , 'val-commit.hpp'
  , 'val-sel.hpp'
  , 'val-sel-commit.hpp'
  , 'var.hpp'
  , 'view.hpp'
  , 'view-sel.hpp'
  , 'view-val.hpp'
  , subdir: 'gecode/kernel/branch'
  )
